0.8.2 - 

  * added support for binlog checksums
  * added support for decoding _all_ datatypes of the RBR protocol
  * fixed handling a "used columns" in the RBR protocol
  * fixed possible crash if run under valgrind
  * fixed crash if --defaults-file doesn't exist (#59790)
  * fixed stripping first characters of log-messages (#58941)
  * fixed mem-leak if connection-pooling is used (#56620)
  * removed bogus timestamp log if state-tracking isn't compiled in
  * removed the "admin" plugin from the list of plugins loaded by default

0.8.1 - 

  * remove unix-socket on shutdown
  * fixed handling of LOAD DATA LOCAL INFILE (#51864)
  * fixed mem-leak on connect for pre-4.1 clients
  * fixed initial error-packet sent to client if all backends are down (#45417)
  * don't try to set a fd-limit if the user didn't explicitly tried to raise it
  * fixed hard-limit in case the fdlimit is set (#48120)
  * fixed traversing a resultset in Lua if it contained NULL fields
  * strip the top_srcdir from the leading source filenames in log-messages

  SQL Tokenizer
  * fixed parsing of literals that start with a digit (#49716)
  * added parsing of floats in scientific notation

  Proxy Plugin
  * fixed query forwarding of time goes backwards (#50806)
  * allow to intercept LOAD DATA and SHOW ERROR commands

  Admin Plugin
  * removed the default values for --admin-username and --admin-password
  * enforce --admin-username, --admin-password and --admin-lua-script to be set
    if the admin plugin is loaded (#53429)
  
  API
  * deprecated a unused network_mysqld_com_query_result_track_state()
  * deprecated chassis_set_fdlimit() in favour of chassis_fdlimit_set()
  * fixed thread-safety for network_address_set_address() (#49099)
  * split the chassis.c into chassis_frontend_*.c to allow custom frontends
  * added shutdown hooks to free the global memory of 3rd party libs like openssl
  * removed con->in_load_data_local

0.8.0 - 2010-01-21

  * added a threaded event handling layer